added db api automation

--- a/src/test/resources/configurations.properties
+++ b/src/test/resources/configurations.properties
@@ -9,3 +9,5 @@ studymateDbPassword=lms2023~
 supplysyncDbUrl=jdbc:postgresql://18.159.52.24:5433/postgres
 supplysyncDbUsername=supplysyncuser
 supplysyncDbPassword=supplysyncpass
+
+userRole=doctor
