--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,18 @@
     <artifactId>Cashwise_API_automation</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <distributionManagement>
+        <repository>
+            <id>your-repository-id</id>
+            <url>https://your.repository.url/path</url>
+        </repository>
+        <snapshotRepository>
+            <id>your-snapshot-repository-id</id>
+            <url>https://your.snapshot.repository.url/path</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -102,6 +114,7 @@
 
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -115,6 +128,7 @@
                     </includes>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>net.masterthought</groupId>
                 <artifactId>maven-cucumber-reporting</artifactId>
